k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: k8s-app
  name: k8s-app
spec:
  containers:
  - image: lucasgiaco91/k8s-app
    imagePullPolicy: Always
    name: k8s-app
    ports:
    - containerPort: 5000
      protocol: TCP
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: k8s-app
  name: k8s-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: k8s-app
  type: ClusterIP
