k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-app
  name: k8s-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: k8s-app
  type: ClusterIP
